--- a/mese/kutyajokaracsony.html
+++ b/mese/kutyajokaracsony.html
@@ -25,7 +25,7 @@
     <header>
         <div class="row">
             <img class="img-fluid" src="../mese/pic/s1.gif" id="elsoGif">
-            <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand" href="../index.php">
                 Gólyaműhely<br />
                 <img id="logo" src = "../pics/ico/ahtale2.png" class = "rounded-circle" alt = "" title = "Gólyaműhely" role = "img">
                </a>
