--- a/mese.html
+++ b/mese.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto ">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.php">Főoldal<span class = "sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
