--- a/ajandektargyak.html
+++ b/ajandektargyak.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto ">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.php">Főoldal<span class = "sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
@@ -82,12 +82,12 @@
     </nav>
 
     <main>
-        <div class="container-fluid">
+        <div class="container">
             <h3>Ajándéktárgyak</h3>
             <!---------1.sor------------------->
             <div class="row">
                 <!--------1.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-1">
                             <div class="content">
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <!--------2.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-2">
                             <div class="content">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <!--------3.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-3">
                             <div class="content">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <!--------4.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-4">
                             <div class="content">
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <!--------5.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-5">
                             <div class="content">
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <!--------6.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-6">
                             <div class="content">
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <!--------7.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-7">
                             <div class="content">
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <!--------8.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-8">
                             <div class="content">
@@ -210,7 +210,7 @@
                     </div>
                 </div>
                 <!--------9.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-9">
                             <div class="content">
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <!--------10.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-10">
                             <div class="content">
@@ -244,7 +244,7 @@
                     </div>
                 </div>
                 <!--------11.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-11">
                             <div class="content">
@@ -266,7 +266,7 @@
                     </div>
                 </div>
                 <!--------12.kép------------------>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2">
+                <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                     <div class="parent">
                         <div class="wrapper thumb-12">
                             <div class="content">
@@ -292,56 +292,91 @@
     </main>
 
     <footer class="bg-success">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-3 m-footer-contact">
-                    <a class="navbar-brand" href="index.html">
-                        BUDAPEST
+        <div class="container ">
+            <div class="row ">
+                <div class="col-sm-6 col-md-2 m-footer-contact ">
+                    <a class="navbar-brand " href="index.html ">
+                        <h4>Gólyaműhely</h4>
+                        <h6>BUDAPEST, 2020-2023
+                        </h6>
                     </a>
-                    <p>
-                        Gólyaműhely<br>
-                    </p>
                 </div>
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
-                        <li><a href="olajfestmeny.html">Olajfestmény</a></li>
-                        <li><a href="grafika.html">Grafika</a></li>
-                        <li><a href="mozaik.html">Mozaik</a></li>
-                        <li><a href="butor.html">Bútor</a></li>
-                        <li><a href="mese.html">Mese</a></li>
+                        <li>
+                            <a href="olajfestmeny.html ">Olajfestmény</a>
+                        </li>
+                        <li>
+                            <a href="grafika.html ">Grafika</a>
+                        </li>
+                        <li>
+                            <a href="mozaik.html ">Mozaik</a>
+                        </li>
+                        <li>
+                            <a href="butor.html ">Bútor</a>
+                        </li>
+                        <li>
+                            <a href="mese.html ">Mese</a>
+                        </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Referenciák</strong>
                     <ul>
-                        <li><a href="restauralas.html">Restaurálás</a></li>
-                        <li><a href="mesegrafika.html">Mesegrafika</a></li>
+                        <li>
+                            <a href="restauralas.html ">Restaurálás</a>
+                        </li>
+                        <li>
+                            <a href="mesegrafika.html ">Mesegrafika</a>
+                        </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Információ</strong>
                     <ul>
-
-                        <li><a href="bemutatkozas.html">Bemutatkozás</a></li>
-                        <li><a href="gyik.html">Kérdések és válaszok</a></li>
-                        <li><a href="linkek.html">Linkek</a></li>
-                        <li><a href="ajandekok.html">Ajándéktárgyak</a></li>
-                        <li><a href="kedvencek.html">Kedvencek</a></li>
-                        <li><a href="kapcsolat.html">Kapcsolat</a></li>
                         <li>
-                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img class="elerhetosegek" src="./pics/ico/fb_black_50x50.png" alt="Facebook"><br>Facebook</a>
+                            <a href="bemutatkozas.html ">Bemutatkozás</a>
                         </li>
-                        <img class="elerhetosegek" src="./pics/ico/phone_50x50.png" alt="Image"><br />06-20-482-3933
+                        <li>
+                            <a href="gyik.html ">Kérdések és válaszok</a>
+                        </li>
+                        <li>
+                            <a href="linkek.html ">Linkek</a>
+                        </li>
+                        <li>
+                            <a href="ajandekok.html ">Ajándéktárgyak</a>
+                        </li>
+                        <li>
+                            <a href="kedvencek.html ">Kedvencek</a>
+                        </li>
+                        <li>
+                            <a href="kapcsolat.html ">Kapcsolat</a>
+                        </li>
                     </ul>
                 </div>
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
+                    <strong>Kapcsolat</strong>
+                    <ul>
+
+                        <li>
+                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png " alt="Facebook " id="fbikon "></a>
+                        </li>
+                        <li>
+                            <img src="pics\flaticons\Call\icons8-phonelink-ring-32.png " alt="Image " id="telefonikon ">
+                            <span class="menu_telefonszam ">06-20-482-3933</span>
+                        </li>
+
+                    </ul>
+                </div>
+
+
             </div>
-            <!---row vége--->
+            <!---row -vége--->
         </div>
         <!---container vége--->
     </footer>
+
 
 
     <script src="./js/jquery-3.1.1.slim.min.js"></script>
