--- a/butor.html
+++ b/butor.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto ">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Főoldal<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.php">Főoldal<span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
@@ -199,23 +199,21 @@
                     </svg>
 
             </div>
-            <!---container-->
+        </div>
+        <!---container-->
 
     </main>
-    <footer class="bg-success ">
+    <footer class="bg-success">
         <div class="container ">
             <div class="row ">
-                <div class="col-sm-6 col-md-3 m-footer-contact ">
+                <div class="col-sm-6 col-md-2 m-footer-contact ">
                     <a class="navbar-brand " href="index.html ">
-
-        BUDAPEST
-    </a>
-                    <p>
-                        Gólyaműhely<br>
-                    </p>
+                        <h4>Gólyaműhely</h4>
+                        <h6>BUDAPEST, 2020-2023
+                        </h6>
+                    </a>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav ">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
                         <li>
@@ -235,8 +233,7 @@
                         </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav ">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Referenciák</strong>
                     <ul>
                         <li>
@@ -247,11 +244,9 @@
                         </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav ">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Információ</strong>
                     <ul>
-
                         <li>
                             <a href="bemutatkozas.html ">Bemutatkozás</a>
                         </li>
@@ -270,15 +265,26 @@
                         <li>
                             <a href="kapcsolat.html ">Kapcsolat</a>
                         </li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
+                    <strong>Kapcsolat</strong>
+                    <ul>
+
                         <li>
-                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="./pics/ico/fb_black_50x50.png " alt="Facebook "><br>Facebook</a>
+                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png " alt="Facebook " id="fbikon "></a>
                         </li>
-                        <img src="./pics/ico/phone_50x50.png " alt="Image "><br/>06-20-482-3933
+                        <li>
+                            <img src="pics\flaticons\Call\icons8-phonelink-ring-32.png " alt="Image " id="telefonikon ">
+                            <span class="menu_telefonszam ">06-20-482-3933</span>
+                        </li>
+
                     </ul>
                 </div>
 
+
             </div>
-            <!---row vége--->
+            <!---row -vége--->
         </div>
         <!---container vége--->
     </footer>
