--- a/festmeny-restauralas.html
+++ b/festmeny-restauralas.html
@@ -23,20 +23,24 @@
 
 <body>
 
+
+
     <nav class="navbar navbar-toggleable-md  navbar-dark bg-info">
+
         <div class="container">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            <a class="navbar-brand" href="index.php">
+
+            <a class="navbar-brand" href="index.php" id="foLogo">
                     Gólyaműhely<br/>
                     <img
                         src="./pics/ico/ahtale2.png"
                         class="rounded-circle"
                         alt=""
                         title="Gólyaműhely"
-                        role="img">
-
+                        role="img"
+                        id="golyaslogo">
                 </a>
 
             <div class="collapse navbar-collapse" id="hamburgermenü">
@@ -57,7 +61,8 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="festmeny-restauralas.html">Restaurálás</a>
 
-                            <a class="dropdown-item" href="festmeny-restauralas.html/grafika.html">Grafika</a>
+                            <a class="dropdown-item" href="./grafika.html">Grafika</a>
+
                         </div>
                     </li>
 
@@ -87,7 +92,6 @@
             </div>
         </div>
     </nav>
-    <header></header>
     <main class="">
         <!-----Fősor--------------------------->
 
