--- a/grafika.html
+++ b/grafika.html
@@ -27,28 +27,28 @@
 
 
 <body id="grafika">
-    <nav class="navbar navbar-toggleable-md  navbar-dark bg-info">
 
+    <nav class="navbar navbar-toggleable-md  navbar-dark bg-info">
 
         <div class="container">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class = "navbar-toggler-icon"></span> 
-            </button>
-
-
-
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
             <a class="navbar-brand" href="index.php">
-                Gólyaműhely<br />
-                <img src = "./pics/ico/ahtale2.png" class = "rounded-circle" alt = "" title = "Gólyaműhely" role = "img">
-            </a>
-
-
+                    Gólyaműhely<br/>
+                    <img
+                        src="./pics/ico/ahtale2.png"
+                        class="rounded-circle"
+                        alt=""
+                        title="Gólyaműhely"
+                        role="img">
+                </a>
 
             <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.php">Főoldal<span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
@@ -56,43 +56,48 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="" id=" navbarDropdownMenuLink " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                        Referenciák
-                        </a>
+                        <a class="nav-link dropdown-toggle" href="referenciak.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Referenciák
+                            </a>
 
-                        <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink ">
-                            <a class="dropdown-item " href="festmeny-restauralas.html">Restaurálás</a>
-                            <a class="dropdown-item" href="grafika.html">Mesegrafika</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="festmeny-restauralas.html">Restaurálás</a>
+
+                            <a class="dropdown-item" href="grafika.html">Grafika</a>
+
                         </div>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="olajfestmenyek.html">Olajfestmény</a>
+                    </li>
 
-                    <li class="nav-item ">
-                        <a class="nav-link " href="olajfestmenyek.html ">Olajfestmény</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="grafika.html">Grafika</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="mozaik.html ">Mozaik</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mozaik.html">Mozaik</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="butor.html ">Bútor</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="butor.html">Bútor</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="mese.html ">Mese</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mese.html">Mese</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="ajandektargyak.html ">Ajándéktárgyak</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ajandektargyak.html">Ajándéktárgyak</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="kedvencek.html ">Kedvencek</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kedvencek.html">Kedvencek</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="kapcsolat.html ">Kapcsolat</a>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="kapcsolat.html">Kapcsolat</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <header>
 
 
