--- a/bemutatkozas.html
+++ b/bemutatkozas.html
@@ -63,9 +63,7 @@
                         <a class="nav-link" href="olajfestmenyek.html">Olajfestmény</a>
                     </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="grafika.html">Grafika</a>
-                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="mozaik.html">Mozaik</a>
                     </li>
@@ -102,17 +100,20 @@
                             festményeket, grafikákat, ajándék tárgyakat készítek, valamint képeket restaurálok.</p>
                     </div><br>
                     <div class="jumbotron">
-                        <img class="img-fluid" src="mesegrafika/gyerekszoba/babaszoba14.JPG">
-                        <img class="img-fluid" src="mesegrafika/gyerekszoba/Babaszoba_9.JPG">
-                        <img class="img-fluid" src="pics/ahgr2.jpg">
+                        <img class="col-md-5" src="mesegrafika/gyerekszoba/babaszoba14.JPG ">
+                        <img class="col-md-5" src="mesegrafika/gyerekszoba/Babaszoba_9.JPG ">
+                        <img class="col-md-5" src="pics/ahrest.png ">
+                        <img class="col-md-5" src="pics/ahgr2.jpg ">
+                        <img class="col-md-5" src="pics/ahoil.png ">
+                        <img class="col-md-5" src="pics/szigno/signature.png ">
 
                     </div>
                 </div>
-                <div class="container">
-                    <p id="idezet">"Képet bárki tud festeni, de hogy a képnek lelket adj, Istenhez közel kell lenned!"
-                        <img src="./pics/golya.gif" id="golyagif"></p>
+                <div class="container ">
+                    <p id="idezet ">"Képet bárki tud festeni, de hogy a képnek lelket adj, Istenhez közel kell lenned! "
+                        <img src="./pics/golya.gif " id="golyagif "></p>
                 </div>
-                <div class="container" id="gondolatok">
+                <div class="container " id="gondolatok ">
                     <h3>Az én világom</h3>
 
                     <p>Munkám során jöttem rá, hogy bár a barokk mintái közé születtem, az én lelkem mégis inkább a szecesszió cifra világában érzi jól magát, ahol a gömbölyű formáktól és a hullámzó vonalaktól szinte megszédül az ember, ahol az élénk, bátor
@@ -134,33 +135,33 @@
 
                 <br/>
 
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card border-primary mb-3" style="max-width: 20rem;">
-                            <div class="card-header">
+                <div class="row ">
+                    <div class="col-md-4 ">
+                        <div class="card border-primary mb-3 " style="max-width: 20rem; ">
+                            <div class="card-header ">
                                 <h4>„ Apám igazi művész”</h4>
                             </div>
-                            <div class="card bg-primary">
-                                <div class="card-body">
-                                    <p class="card-text">
+                            <div class="card bg-primary ">
+                                <div class="card-body ">
+                                    <p class="card-text ">
                                         Édesapám jóvoltából, - aki díszítőfestő restaurátor - barokk minták között nőttem fel. Apám igazi művész, én csak tanuló vagyok, aki játszik. (Mint tudjuk, nem a művész éli az életet, hanem az élet éli a művészt.) Ő adta a kezembe a ceruzát gyermekkoromban.
                                         9 évesen már az állványon voltam mellette, figyeltem, ahogy dolgozik, és igyekeztem ellesni tőle a szakma minden apró fortélyát. Édesapám az életre is nevelt. Bízott bennem, a kis emberkében, (a munkavédelmi előírásokat
                                         korán a fejembe verte), de nem tanított különösebben, inkább hagyta, hogy kísérletezzem, játsszam az anyagokkal, így engedve szabad utat fejlődésemnek. Ha tanácsot kértem, kaptam. Ha bakit ejtettem, csak annyit
-                                        mondott: "Ö, ö,ö Zsófikám, ez így nem jó!" - és én javítottam, ha úgy éreztem! Elég makacs vagyok, így mindig a saját hibámból tanultam. Apu mellett szinte ragadtak rám a szakmai technikák.
+                                        mondott: "Ö, ö,ö Zsófikám, ez így nem jó! " - és én javítottam, ha úgy éreztem! Elég makacs vagyok, így mindig a saját hibámból tanultam. Apu mellett szinte ragadtak rám a szakmai technikák.
                                     </p>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-4">
-                        <div class="card border-secondary mb-3" style="max-width: 20rem;">
-                            <div class="card-header">
-                                <h4>"A nagybetűs élet"</h4>
+                    <div class="col-md-4 ">
+                        <div class="card border-secondary mb-3 " style="max-width: 20rem; ">
+                            <div class="card-header ">
+                                <h4>"A nagybetűs élet "</h4>
                             </div>
-                            <div class="card bg-danger">
-                                <div class="card-body">
-                                    <p class="card-text">
+                            <div class="card bg-danger ">
+                                <div class="card-body ">
+                                    <p class="card-text ">
                                         Kikerülve apám szárnyai alól a Nagybetűs Életbe, új mesterem a szükség lett. Sokat rajzoltam, de nem volt pénzem keretre, ezért megtanultam keretezni. Épületüvegezést is tanultam, hogy megéljek. Így ismertem meg az üveget, amibe beleszerettem. Az üveg
                                         csodálatos anyag: színei, csillogása, áttetszősége, egy újabb nagy játékra hívott engem. Kombinációja végtelennek tűnő csoda. Nagy példaképem - apám után - Róth Miksa, akinek munkáit csodálva megértettem, hogyan
                                         lehet lelket lehelni ebbe a merev és rideg anyagba.
@@ -170,19 +171,19 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
-                        <div class="card border-success mb-3" style="max-width: 20rem;">
-                            <div class="card-header">
+                    <div class="col-md-4 ">
+                        <div class="card border-success mb-3 " style="max-width: 20rem; ">
+                            <div class="card-header ">
                                 <h4>„ A lavina elindult...”</h4>
                             </div>
-                            <div class="card bg-info">
-                                <div class="card-body">
-                                    <p class="card-text">
+                            <div class="card bg-info ">
+                                <div class="card-body ">
+                                    <p class="card-text ">
                                         A festett bútorok szintén adták magukat. Az anyagi hiány és a fejemben vibráló minták csodát műveltek a szocreál konyhaszekrényünkből és különböző régi bútorokból. A lavina elindult és már nem tudok leállni vele, mindent kifestek.
                                     </p>
                                     <p>Megszerettem az anyagokat, amik mindig hálásan a kezem alá idomulnak, formálódnak és alakulnak elképzeléseim szerint. Dolgozom, játszom és kísérletezem az anyagokkal. A munkámban megtaláltam a szeretetet.</p>
 
-                                    <p>A cél, hogy megtaláljam az összhangot a mai rohanó és igaztalan világ és az én kis falakkal körbe zárt "paradicsomom" között.</p>
+                                    <p>A cél, hogy megtaláljam az összhangot a mai rohanó és igaztalan világ és az én kis falakkal körbe zárt "paradicsomom " között.</p>
 
                                     <p>Társam, jó barátom: Hattyú kutyám, aki hűen őrzi körülöttem a békét és a csendet, hogy nyugodtan dolgozhassak. Az én világom ritkán fogad be idegen látogatókat, és ha mégis, - mint egy-egy kiállításon, - fura érzés,
                                         hisz életem apró mozaikjairól van szó, egy-egy érzésemet tükrözik a képek. Minden képem, munkám a lelkem egy darabját foglalja magába, amitől már élnek tovább maguktól.</p>
