--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body class="bg-info">
 
     <nav class="navbar navbar-toggleable-md  navbar-dark bg-info">
         <div class="container">
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.php">Főoldal<span class = "sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
@@ -113,18 +113,18 @@
 
 
     </main>
+
     <footer class="bg-info ">
         <div class="container ">
             <div class="row ">
-                <div class="col-sm-6 col-md-3 m-footer-contact ">
-                    <a class="navbar-brand " href="index.html ">
-
+                <div class="col-sm-6 col-md-2 m-footer-contact ">
+                    <a class="navbar-brand " href="index.php">
                         <h4>Gólyaműhely</h4>
-                        <h6>BUDAPEST, 2020</h6>
+                        <h6>BUDAPEST, 2020-2023
+                        </h6>
                     </a>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav ">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
                         <li>
@@ -144,8 +144,7 @@
                         </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav ">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Referenciák</strong>
                     <ul>
                         <li>
@@ -156,11 +155,9 @@
                         </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav ">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Információ</strong>
                     <ul>
-
                         <li>
                             <a href="bemutatkozas.html ">Bemutatkozás</a>
                         </li>
@@ -176,16 +173,32 @@
                         <li>
                             <a href="kedvencek.html ">Kedvencek</a>
                         </li>
+                        <li>
+                            <a href="kapcsolat.html ">Kapcsolat</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
+                    <strong>Kapcsolat</strong>
+                    <ul>
+
+                        <li>
+                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png " alt="Facebook " id="fbikon "></a>
+                        </li>
+                        <li>
+                            <img src="pics\flaticons\Call\icons8-phonelink-ring-32.png " alt="Image " id="telefonikon ">
+                            <span class="menu_telefonszam ">06-20-482-3933</span>
+                        </li>
 
                     </ul>
                 </div>
 
+
             </div>
-            <!---row vége--->
+            <!---row -vége--->
         </div>
         <!---container vége--->
     </footer>
-
 
 
     <script src="./js/jquery-3.1.1.slim.min.js "></script>
