robots.txt hozzaadva

--- a/festmeny-restauralas.html
+++ b/festmeny-restauralas.html
@@ -1055,7 +1055,7 @@
                             <a href="restauralas.html ">Restaurálás</a>
                         </li>
                         <li>
-                            <a href="mesegrafika.html ">Mesegrafika</a>
+                            <a href="./grafika.html ">Mesegrafika</a>
                         </li>
                     </ul>
                 </div>
@@ -1110,7 +1110,7 @@
     </script>
     <script src="./js/app.js "></script>
     <script src="./js/bootstrap.js "></script>
-    <script src="/js/index.js "></script>
+    <script src="./js/index.js "></script>
     <script src="./js/restauralas.js "></script>
     <script src="./js/kepnagyitas.js "></script>
 </body>
